# bilimusic

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/: api.py  server.py  store.py
data/: credential.json  playlists.json
web/: index.html
web/css/: app.css
web/js/: app.js
